Use height:0 to fix station collapse weirdness

--- a/client/src/components/cafes/combined-cafes.css
+++ b/client/src/components/cafes/combined-cafes.css
@@ -28,7 +28,6 @@
     color: #212121;
     display: flex;
     flex-direction: column;
-    flex-grow: 1;
     max-width: 100%;
 }
 
@@ -222,7 +221,8 @@
 }
 
 .station.collapsed .menu-body {
-    display: none;
+    height: 0;
+    visibility: hidden;
 }
 
 .menu-item-head {
